--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
     "scripts": {
-        "dev": "vercel dev",
-        "build": "vercel build"
+        "dev": "vite",
+        "build": "vite build",
+        "preview": "vite build && vite preview"
     },
     "dependencies": {
-        "@vite-plugin-vercel/vike": "^2.0.0",
         "mini-van-plate": "^0.5.4-perf.0",
         "node-fetch": "^3.3.2",
         "typescript": "4.8.4",
