--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,6 +13,9 @@
     "moduleResolution": "Bundler",
     "resolveJsonModule": true,
     "isolatedModules": true,
-    "noEmit": true
+    "noEmit": true,
+    "paths": {
+      "#lib/*": ["./lib/*"]
+    }
   }
 }
